# skwd-daemon

./: .gitignore  Cargo.toml  README.md  clippy.toml  flake.nix  rustfmt.toml
.github/workflows/: aur-publish.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: config.rs  db.rs  lyrics.rs  main.rs  server.rs  util.rs
crates/daemon/src/wall/: apply.rs  bootstrap.rs  cache.rs  clean_trash.rs  dispatch.rs  mod.rs  thumb.rs  watcher.rs  weather.rs
crates/daemon/src/wall/analysis/: mod.rs
crates/daemon/src/wall/matugen/: mod.rs
crates/daemon/src/wall/optimize/: dispatch.rs  image.rs  mod.rs  video.rs
crates/daemon/src/wall/steam/: mod.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
data/: skwd-daemon.service
packaging/aur/: .SRCINFO  PKGBUILD  skwd-daemon.install
packaging/copr/: skwd-daemon.spec
