[package]
name = "skwd-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "skwd-daemon"
path = "src/main.rs"

[dependencies]
skwd-proto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
notify = { workspace = true }
image = { workspace = true }
walkdir = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
